<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bluedark"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="@+id/btnGenerate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnGenerate"
        app:layout_constraintTop_toTopOf="@+id/btnGenerate" />

    <Button
        android:id="@+id/btnWild"
        android:layout_width="165dp"
        android:layout_height="100dp"
        android:background="@drawable/outlineforbutton"
        android:text=" Wild Card "
        android:textAllCaps="false"
        android:textColor="@color/bluedark"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerate"
        app:layout_constraintVertical_bias="0.60"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="165dp"
        android:layout_height="100dp"
        android:background="@drawable/outlineforbutton"
        android:text="Skip"
        android:textColor="@color/bluedark"
        android:textSize="30dp"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btnWild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnWild" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="290dp"
        android:layout_height="282dp"
        android:background="@drawable/outlineforbutton"
        android:text=""
        android:textColor="@color/bluedark"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnBackWildCard"
        android:layout_width="165dp"
        android:layout_height="100dp"
        android:background="@drawable/outlineforbutton"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/bluedark"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />


    <TextView
        android:id="@+id/textView_Number_Turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/bluedark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />


    <TextView
        android:id="@+id/wild_textview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/bluedark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Number_Turn"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/imageBtnExit"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>